28015 Add storage external relationship to PcrBatch It is now possible to set an external relationship to a storage-unit from PcrBatch